--- a/css/cart_list.css
+++ b/css/cart_list.css
@@ -8,6 +8,8 @@
 }
 .cart-heading {
     /* border: solid black 2px; */
+    background: #28a745;
+    color: white;
     margin-left: -10px;
     padding: 5px;
     margin-bottom: 20px;
